# Taskly

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  ocr.rs  permissions.rs  screenshot.rs  window_monitor.rs
apps/desktop/src/components/: CopilotPanel.tsx  PermissionGuide.tsx  Settings.tsx  TodoList.tsx  TodoWidget.tsx
apps/desktop/src/services/: debugger.ts  llm.ts  monitor.ts  ocr.ts  permissions.ts  storage.ts  sync.ts  window.ts
apps/desktop/src/store/: index.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/types/: index.ts
apps/server/: go.mod
apps/server/cmd/server/: main.go
apps/server/internal/config/: config.go
apps/server/internal/handler/: todo.go
apps/server/internal/model/: todo.go
scripts/: generate-icons.swift
