[package]
name = "taskly"
version = "0.1.0"
description = "智能待办识别与管理工具"
authors = ["Taskly Team"]
edition = "2021"

[lib]
name = "taskly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
